--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <input id="input"type="text" placeholder=" Search for meal...">
             <button id="submit-btn">submit</button>
         </section>
+        <section id="monster-logo">
+            <img src="img/logo.png" alt="">
+        </section>
         <section id="meal-dashboard">
            
     
